examples/errors/08_duplicated_function/duplicated_function.txy
fn test(): int
	return 0;
endfn;

fn test(): int
	return 0;
endfn;

fn main(): int
	return 0;
endfn;